--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "babel-polyfill": "^6.22.0",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
-    "recastai": "^3.1.1"
+    "recastai": "^3.1.1",
+    "request": "^2.81.0",
+    "request-promise": "^4.2.1"
   },
   "devDependencies": {
     "babel-cli": "^6.11.4",
